# mul-cat

./: Cargo.toml  README.md
.github/workflows/: docs.yml
src/: bits_ext.rs  carry_save.rs  error.rs  lib.rs
src/booth/: digit.rs  mod.rs  partial_product.rs
src/circuit/: booth.rs  builder_ext.rs  csa.rs  mod.rs  mul.rs  reduction.rs
src/evaluate/: booth_stage.rs  mod.rs  mul.rs  tree_stage.rs
src/graph/: mod.rs  reduction_graph.rs
src/interpret/: descriptor.rs  mod.rs  morphism.rs
src/schoolbook/: grid.rs  mod.rs  schoolbook_mul.rs
src/topology/: linear.rs  mod.rs  wallace.rs
